--- a/src/meson.build
+++ b/src/meson.build
@@ -1,3 +1,7 @@
+#Name: Ji Hyun An A91108783
+#      Steffe Reyes A16093679
+#      CSE 100 PA2
+
 subdir('DictionaryTrie')
 subdir('Util')
 
@@ -8,3 +12,8 @@ benchtrie_exe = executable('benchtrie.cpp.executable',
     sources: ['benchtrie.cpp'],
     dependencies : [dictionary_trie_dep, util_dep],
     install : true)
+
+autocomplete_exe = executable('autocomplete.cpp.executable',
+	sources: ['autocomplete.cpp'],
+	dependencies : [dictionary_trie_dep, util_dep],
+	install : true)
